@@ -5,4 +5,6 @@
   <Set name="war"><SystemProperty name="jetty.home"/>/webapps/solr.war</Set>
   <Set name="defaultsDescriptor"><SystemProperty name="jetty.home"/>/etc/webdefault.xml</Set>
   <Set name="tempDirectory"><Property name="jetty.home" default="."/>/solr-webapp</Set>
+  <!-- Increase the maximum POST size to 1 MB to be able to handle large shard requests -->
+  <Set name="maxFormContentSize">1000000</Set>
 </Configure>
